data/derived/sp14/progs/unify/prog4298.ml.out
Characters 25-49:
  let rec fixpoint (f,b) = wwhile(fixpoint(f,b), b);;
                           ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a but an expression was expected of type
         'a -> 'a * bool
       The type variable 'a occurs inside 'a -> 'a * bool
